@@ -19,6 +19,9 @@
     * Add the pclose method to the Sys::IO class.
     * Add the _pclose method to the Sys::IO class.
     * Add the pclose method to the Sys class.
+    * Add the fork method to the Sys class.
+    * Add the getpriority method to the Sys class.
+    * Add the setpriority method to the Sys class.
 0.505 2023-11-30
   [Incompatible Changes]
     * The timeval_interval method in the Sys::Time::Util do not throw an exception if tv_sec and tv_usec is a negative value.
